--- a/1832074.html
+++ b/1832074.html
@@ -81,7 +81,7 @@
         body.position.set( 0, -30, 0 );
         body.castShadow = true; 
         body.receiveShadow = true;
-        scene.add( body );
+        //scene.add( body );
 
         //雪だるまを作成する
         const SnowmanGeometry = new THREE.SphereGeometry( 10, 32, 32 ); 
@@ -91,7 +91,7 @@
         head.position.set( 0, -10, 0 );
         head.castShadow = true; 
         head.receiveShadow = true;
-        scene.add( head );
+        //scene.add( head );
 
         //マフラー
         const scarfGeometry = new THREE.CylinderGeometry( 9 ,9, 5, 32 );
@@ -111,7 +111,23 @@
         mouse.rotation.x = 1;
         mouse.castShadow = true; 
         mouse.receiveShadow = true;
-        scene.add( mouse );
+        //scene.add( mouse );
+
+        //右目を作成
+        const ReyeGeometry = new THREE.SphereGeometry( 0.05, 32, 32 ); 
+        //半径、垂直方向の分割数、水平方向の分割数
+        const ReyeMaterial = new THREE. MeshStandardMaterial( {color: 0x000000} );
+        const Reye = new THREE.Mesh( ReyeGeometry, ReyeMaterial );
+        Reye.position.set( -0.2, 1.3, 0.45 );
+        scene.add( Reye );
+
+        //左目を作成
+        const LeyeGeometry = new THREE.SphereGeometry( 0.05, 32, 32 ); 
+        //半径、垂直方向の分割数、水平方向の分割数
+        const LeyeMaterial = new THREE. MeshStandardMaterial( {color: 0x000000} );
+        const Leye = new THREE.Mesh( LeyeGeometry, LeyeMaterial );
+        Leye.position.set( 0.2, 1.3, 0.45 );
+        scene.add( Leye );
 
 
         //雪だるま全体のオブジェクト
@@ -120,6 +136,8 @@
         snowman.add(body);
         snowman.add(scarf);
         snowman.add(mouse);
+        snowman.add(Leye);
+        snowman.add(Reye);
         
         //雪だるまの原点
         snowman.position.set( 0, 0, -10 );
