--- a/1832074.html
+++ b/1832074.html
@@ -52,7 +52,7 @@
           sprite.position.z = 500 * (Math.random() - 0.5);
           // 必要に応じてスケールを調整
           sprite.scale.set(3, 3, 3);
-
+          sprite.castShadow = true;
           scene.add(sprite);
         }
 
@@ -114,19 +114,19 @@
         //scene.add( mouse );
 
         //右目を作成
-        const ReyeGeometry = new THREE.SphereGeometry( 0.05, 32, 32 ); 
+        const ReyeGeometry = new THREE.SphereGeometry( 5, 32, 32 ); 
         //半径、垂直方向の分割数、水平方向の分割数
         const ReyeMaterial = new THREE. MeshStandardMaterial( {color: 0x000000} );
         const Reye = new THREE.Mesh( ReyeGeometry, ReyeMaterial );
-        Reye.position.set( -0.2, 1.3, 0.45 );
+        Reye.position.set( -2, -4, +12 );
         scene.add( Reye );
 
         //左目を作成
-        const LeyeGeometry = new THREE.SphereGeometry( 0.05, 32, 32 ); 
+        const LeyeGeometry = new THREE.SphereGeometry( 5, 32, 32 ); 
         //半径、垂直方向の分割数、水平方向の分割数
         const LeyeMaterial = new THREE. MeshStandardMaterial( {color: 0x000000} );
         const Leye = new THREE.Mesh( LeyeGeometry, LeyeMaterial );
-        Leye.position.set( 0.2, 1.3, 0.45 );
+        Leye.position.set( 2, -4, +12 );
         scene.add( Leye );
 
 
