--- a/1832074.html
+++ b/1832074.html
@@ -34,6 +34,7 @@
         const camera = new THREE.PerspectiveCamera(45, width / height);
         // カメラの初期座標を設定
         camera.position.set(0, 60, 80);
+        camera.lookAt(new THREE.Vector3(0, -10, 0));
 
         // マテリアルを作成する
         const material = new THREE.SpriteMaterial({
