--- a/1832074.html
+++ b/1832074.html
@@ -149,7 +149,7 @@
 
         // 照明を作成SpotLight( 色, 光の強さ, 距離, 照射角, ボケ具合, 減衰率)
         const light = new THREE.SpotLight(0xffffff, 1, 300, Math.PI / 6, 0.5);
-        light.position.set(0,50,55);
+        light.position.set( 15, 50, 55);
 
 
         // ヘルパーを作成
