--- a/1832074.html
+++ b/1832074.html
@@ -136,11 +136,11 @@
         //半径、垂直方向の分割数、水平方向の分割数
         const buttonMaterial = new THREE. MeshStandardMaterial( {color: 0x000000} );
         const button = new THREE.Mesh( buttonGeometry, buttonMaterial );
-        if(i=1){
+        //if(i=1){
           button.position.set( 0, ( -18 - ( 4*i )), 2+( 2*i ));
-        }else{
-          button.position.set( 0, ( -18 - ( 4*i )), 2);
-        }
+        //}else{
+          //button.position.set( 0, ( -18 - ( 4*i )), 2);
+        //}
         scene.add( button );
         }
 
