--- a/1832074.html
+++ b/1832074.html
@@ -50,14 +50,14 @@
 
         // ビルボードを作成
         for (let i = 0; i < 1500; i++) {
-            const sprite = new THREE.Sprite(material);
+            const snow = new THREE.Sprite(material);
           // ランダムな座標に配置
-          sprite.position.x = 500 * (Math.random() - 0.5);
-          sprite.position.y = 100 * Math.random() - 40;
-          sprite.position.z = 500 * (Math.random() - 0.5);
+          snow.position.x = 500 * (Math.random() - 0.5);
+          snow.position.y = 100 * Math.random() - 40;
+          snow.position.z = 500 * (Math.random() - 0.5);
           // 必要に応じてスケールを調整
-          sprite.scale.set(3, 3, 3);
-          scene.add(sprite);
+          snow.scale.set(3, 3, 3);
+          scene.add(snow);
         }
 
 
