--- a/1832074.html
+++ b/1832074.html
@@ -163,8 +163,8 @@
 
 
          // 光源（環境光）
-        const ambientLight = new THREE.AmbientLight(0xffffff, 1.0);
-        scene.add(ambientLight);
+        //const ambientLight = new THREE.AmbientLight(0xffffff, 1.0);
+        //scene.add(ambientLight);
 
         // 照明を作成SpotLight( 色, 光の強さ, 距離, 照射角, ボケ具合, 減衰率)
         const light = new THREE.SpotLight(0xffffff, 1, 300, Math.PI / 6, 0.5);
