--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </p>
     <p>
         カメラの自動移動<br>
-        <a href="1832074_1.html">1832074_1.html</a>,<br>
+        <a href="1832074_1.html">1832074_1.html</a><br>
     </p>
 </body>
 </html>
