--- a/1832074.html
+++ b/1832074.html
@@ -154,10 +154,12 @@
         snowman.add(mouse);//口を追加
         snowman.add(Leye);//左目を追加
         snowman.add(Reye);//右目を追加
+        //雪だるまの原点
+        snowhead.position.set( 0, 0, -10 );
+        scene.add(snowhead);
 
         //雪だるま全体のオブジェクト
         const snowman = new THREE.Group()
-        snowman.add(snowhead);//頭を追加
         snowman.add(body);//体を追加
         snowman.add(scarf);//マフラーを追加
         
