--- a/1832074.html
+++ b/1832074.html
@@ -149,18 +149,23 @@
         }
 
 
-        //雪だるま頭のオブジェクト
-        const snowhead = new THREE.Group()
+        //雪だるま全体のオブジェクト
+        /*const snowhead = new THREE.Group()
         snowman.add(head);//頭を追加
         snowman.add(mouse);//口を追加
         snowman.add(Leye);//左目を追加
         snowman.add(Reye);//右目を追加
 
+        scene.add(snowhead);*/
+
         //雪だるま全体のオブジェクト
         const snowman = new THREE.Group()
-        snowman.add(snowhead);//頭を追加
+        snowman.add(head);//頭を追加
         snowman.add(body);//体を追加
         snowman.add(scarf);//マフラーを追加
+        snowman.add(mouse);//口を追加
+        snowman.add(Leye);//左目を追加
+        snowman.add(Reye);//右目を追加
         
         //雪だるまの原点
         snowman.position.set( 0, 0, -10 );
