--- a/1832074.html
+++ b/1832074.html
@@ -188,7 +188,7 @@
         // 毎フレーム時に実行されるループイベントです
         function tick() {
 
-          snowhead.rotation.x += 0.1;
+          snowhead.rotation.y += 0.1;
 
           // レンダリング
           renderer.render(scene, camera);
